Se crea y busca mejor modelo de Random Forest con GridSearch (modelo_1) y se crea modelo_2 aplicando directamente los hiperparámetros encontrados en el modelo 1

--- a/Clasificación_de_ingresos/Notebooks/00_exploración.ipynb
+++ b/Clasificación_de_ingresos/Notebooks/00_exploración.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 59,
    "id": "7a4b4916",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 60,
    "id": "8219b75e",
    "metadata": {},
    "outputs": [
@@ -184,7 +184,7 @@
        "4             0             0              40            Cuba   <=50K  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 61,
    "id": "22ad4a50",
    "metadata": {},
    "outputs": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 62,
    "id": "e0279d58",
    "metadata": {},
    "outputs": [
@@ -272,7 +272,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 63,
    "id": "fa7a10cb",
    "metadata": {},
    "outputs": [
@@ -416,7 +416,7 @@
        "max         99.000000  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 64,
    "id": "c8c779e2",
    "metadata": {},
    "outputs": [
@@ -462,13 +462,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 65,
    "id": "14f001ca",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Guardar data\n",
-    "df_ingresos.to_csv('../Datos/Procesados/income.csv')"
+    "df_ingresos.to_csv('../Datos/Procesados/income.csv', index=False)"
    ]
   }
  ],
